@@ -1,5 +1,10 @@
 2009-06-16  Felix Riemann  <friemann@svn.gnome.org>
 
+	* plugins/exif-display/exif-display-config.ui:
+	Mark empty labels untranslatable.
+
+2009-06-16  Felix Riemann  <friemann@svn.gnome.org>
+
 	* plugins/exif-display/Makefile.am:
 	* plugins/exif-display/eog-exif-display-plugin.c:
 	Don't install UI files into the plugins folder directly.
